--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                         <form onsubmit="pan()">
                               <label> <strong> Applicacnt Name *</strong> </label><br>
                               <span class="firstname">
-                                    <input type="text" id="applicantnames" placeholder="First_Name"
+                                    <input type="text" id="applicantnames" placeholder="First Name"
                                           pattern="[A-Za-z]{3,15}" name="first_name">
                               </span>
                               <br>
                               <label> <strong> Father Name * </strong> </label><br>
                               <span class="fatherfirstname">
-                                    <input type="text" id="fathername" pattern="[A-Za-z]{3,15}" placeholder="FatherName"
+                                    <input type="text" id="fathername" pattern="[A-Za-z]{3,15}" placeholder="Father Name"
                                           name="father first name">
                               </span>
                               <br>
                               <label> <strong> Mother Name </strong> </label><br>
                               <span class="motherfirstname">
-                                    <input type="text" id="mathername" pattern="[A-Za-z]{3,15}" placeholder="MotherName"
+                                    <input type="text" id="mathername" pattern="[A-Za-z]{3,15}" placeholder="Mother Name"
                                           name="Mother_Name">
                               </span>
                               <br>
