--- a/listapplication.html
+++ b/listapplication.html
@@ -39,9 +39,9 @@
             <tr>
                 <th scope="col" id="serialnumber">Id</th>
                 <th scope="col" id="name">Name</th>
-                <th scope="col" id="mobilenumber">Mobilenumber</th>
+                <th scope="col" id="mobilenumber">Mobile Number</th>
                 <th scope="col" id="emailid">Emailid</th>
-                <th scope="col" id="adharnumber">Aadharnumber</th>
+                <th scope="col" id="adharnumber">Aadhar Number</th>
                 <th scope="col" id="gender">Gender</th>
                 <th scope="col" id="gender">State</th>
                 <th scope="col">Action</th>
