--- a/requestapplication.html
+++ b/requestapplication.html
@@ -30,11 +30,11 @@
                     <th scope="row" id="serialnumber">ID</th>
                     <th scope="row" id="name">NAME</th>
                     <th scope="row" id="idNumber">ID NUMBER</th>
-                    <th scope="row" id="aadharNumber">Aadharnumber</th>
-                    <th scope="row" id="oldNumber">OldNumber</th>
-                    <th scope="row" id="newNumber">NewNumber</th>
-                    <th scope="row" id="oldAddress">OldAddress</th>
-                    <th scope="row" id="newAddress">NewAddress</th>
+                    <th scope="row" id="aadharNumber">Aadhar Number</th>
+                    <th scope="row" id="oldNumber">Old Number</th>
+                    <th scope="row" id="newNumber">New Number</th>
+                    <th scope="row" id="oldAddress">Old Address</th>
+                    <th scope="row" id="newAddress">New Address</th>
                     <th scope="row" id="status">Status</th>
                 </tr>
             </thead>
