--- a/requestchange.html
+++ b/requestchange.html
@@ -26,16 +26,16 @@
         <div class="container">
             <form onsubmit=" requestChange()">
                 <label> <strong> Pancard Holder Name *</strong> </label>
-                <input type="text" id="applicantname" placeholder="Pan_Card_Name" pattern="[A-Za-z]{3,15}" name="Name"
+                <input type="text" id="applicantname" placeholder="Pan Card Name" pattern="[A-Za-z]{3,15}" name="Name"
                     required>
                 <br>
                 <br>
                 <label> <strong> Pancard Id Number *</strong> </label>
-                <input type="text" id="applicantIdNumber" placeholder="Pan_Card_Number" name="idNumber" required>
+                <input type="text" id="applicantIdNumber" placeholder="Pan Card  Id Number" name="idNumber" required>
                 <br>
                 <br>
                 <label> <strong> Aadhar Number *</strong> </label>
-                <input type="text" id="aadharNumber" placeholder="Aadhar_Number" minlength="12" maxlength="12"
+                <input type="text" id="aadharNumber" placeholder="Aadhar Number" minlength="12" maxlength="12"
                     pattern="[0-9]{12}" name="aadharNumber" required>
                 <br>
                 <br>
@@ -44,12 +44,12 @@
                 <br>
                 <label>Old Mobile Number </label>
                 <span class="mobileNumber">
-                    <input type="tel" id="mobileNumber" placeholder="OldNumber" pattern="[6789][0-9]{9}"
+                    <input type="tel" id="mobileNumber" placeholder="Old Number" pattern="[6789][0-9]{9}"
                         name="OldNumber" required>
                 </span>
                 <label>Change Mobile Number</label>
                 <span calss="changeNumber">
-                    <input type="tel" id="changeNumber" placeholder="ChangeNumber" pattern="[6789][0-9]{9}"
+                    <input type="tel" id="changeNumber" placeholder="Change Number" pattern="[6789][0-9]{9}"
                         name="ChangeNumber" required>
                 </span>
                 <br>
@@ -58,11 +58,11 @@
                 <br>
                 <label>Old Address</label>
                 <span class="oldAddress">
-                    <input type="text" id="oldAddress" placeholder="OldAddress" name="OldAddress" required>
+                    <input type="text" id="oldAddress" placeholder="Old Address" name="OldAddress" required>
                 </span>
                 <label>Change Address</label>
                 <span class="changeAddress">
-                    <input type="text" id="changeAddress" placeholder="ChangeAddress" name="ChangeAddress" required>
+                    <input type="text" id="changeAddress" placeholder="Change Address" name="ChangeAddress" required>
                 </span>
                 <br>
                 <br>
