--- a/viewlist.html
+++ b/viewlist.html
@@ -33,9 +33,9 @@
                 <tr>
                     <th scope="row" id="serialnumber">Id</th>
                     <th scope="row" id="name">Name</th>
-                    <th scope="row" id="mobilenumber">Mobilenumber</th>
-                    <th scope="row" id="emailid">Emailid</th>
-                    <th scope="row" id="adharnumber">Aadharnumber</th>
+                    <th scope="row" id="mobilenumber">Mobile Number</th>
+                    <th scope="row" id="emailid">Email Id</th>
+                    <th scope="row" id="adharnumber">Aadhar Number</th>
                     <th scope="row" id="gender">Gender</th>
                 </tr>
             </thead>
