--- a/loginpage.html
+++ b/loginpage.html
@@ -26,6 +26,7 @@
       <label for="password"><strong>Password</strong></label>
       <input type="password" minlength="6" id="password" placeholder="Enter Password">
       <button type="submit">Login</button>
+      <button><a href="registration.html">Registration</a></button>
 
     </form>
     <script src="serviceLayer.js"></script>
