--- a/registration.html
+++ b/registration.html
@@ -45,8 +45,8 @@
             <label> <strong>Confirm Password </strong> </label>
             <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password">
            
-            <button class="button" type="submit">submit</button>
-            
+            <button class="submit" type="submit">submit</button>
+            <button><a href="loginpage.html">Already Login</a></button>
         </form>
     </div>
 
