--- a/loginpage.html
+++ b/loginpage.html
@@ -21,8 +21,8 @@
   <h1>LOGIN FORM</h1>
   <div class="overall">
     <form onsubmit="loginpage()">
-      <label for="username"><strong>Username</strong></label>
-      <input type="text" id="username" placeholder="Enter Username" name="uname">
+      <label for="username"><strong>User Name</strong></label>
+      <input type="text" id="username" placeholder="Enter User Name" name="uname">
       <label for="password"><strong>Password</strong></label>
       <input type="password" minlength="6" id="password" placeholder="Enter Password">
       <button type="submit">Login</button>
