--- a/editpage.html
+++ b/editpage.html
@@ -12,6 +12,7 @@
 <body>
 
     <div class="editpage">
+        <h2>EDIT OPTION</h2>
         <table>
             <caption></caption>
             <tr>
