--- a/listapplication.html
+++ b/listapplication.html
@@ -45,6 +45,7 @@
                 <th scope="col" id="gender">Gender</th>
                 <th scope="col" id="gender">State</th>
                 <th scope="col">Action</th>
+                <th scope="col">Status</th>
             </tr>
         </thead>
         <tbody id="applicationTable"></tbody>
