--- a/requestchange.html
+++ b/requestchange.html
@@ -66,7 +66,7 @@
                 </span>
                 <br>
                 <br>
-                <button type="submit"> SUBMIT </button>
+                <button type="submit"> submit </button>
             </form>
         </div>
     </div>
