--- a/editpage.html
+++ b/editpage.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="editpage">
-        <h2>EDIT OPTION</h2>
+        <h2>EDIT DETAILS</h2>
         <table>
             <caption></caption>
             <tr>
@@ -97,7 +97,7 @@
             </tr>
         </table>
         <div class="donebutton">
-            <button type="submit" onclick="modifyInformation(id)" value=""> DONE </button>
+            <button type="submit" onclick="modifyInformation(id)" value=""> Done </button>
         </div>
         <div class="printbutton">
         <button onclick="window.print()">Print this page</button>
