--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                     <option value="Transgender">Transgender</option>
                               </select> <br>
                               <br>
-                              <button class="submit">submit</button>
+                              <button class="submit">Submit</button>
                         </form>
                         <br>
                         <br>
