--- a/header.html
+++ b/header.html
@@ -1,12 +1,13 @@
 <header>
     <nav class="navbar">
         <ul>
-        <a class="navbar" href="registration.html"> <li> REGISTRATION </li></a>
-        <a class="navbar" href="index.html"><li> APPLY </li></a>
-        <a class="navbar" href="listapplication.html"><li> MODIFY </li></a>
-        <a class="navbar" href="requestchange.html"><li> REQUESTCHANGE </li></a>
-        <a class="navbar" href="viewlist.html"><li> LIST OF APPLICATION </li></a>
-        <a class="navbar" href="requestapplication.html"><li> LIST OF REQUEST </li></a>
+        <a class="navbar" href="registration.html"> <li> Registration </li></a>
+        <a class="navbar" href="index.html"><li> Apply </li></a>
+        <a class="navbar" href="listapplication.html"><li> Modify </li></a>
+        <a class="navbar" href="requestchange.html"><li> Request Change </li></a>
+        <a class="navbar" href="viewlist.html"><li> List Of Application </li></a>
+        <a class="navbar" href="requestapplication.html"><li> List Of Request </li></a>
+        <a class="navbar" href="userlist.html"><li> List Of User </li></a>
     </ul>
     </nav>
 </header>
