--- a/registration.html
+++ b/registration.html
@@ -47,6 +47,7 @@
            
             <button class="submit" type="submit">Submit</button>
             <button><a href="loginpage.html">Already login</a></button>
+            <button><a href="admin.html">Admin</a></button>
         </form>
     </div>
 
