--- a/requestapplication.html
+++ b/requestapplication.html
@@ -27,14 +27,15 @@
             <caption></caption>
             <thead>
                 <tr>
-                    <th scope="row" id="name">NAME</th>
-                    <th scope="row" id="idNumber">ID NUMBER</th>
+                    <th scope="row" id="name">Name</th>
+                    <th scope="row" id="idNumber">Id Number</th>
                     <th scope="row" id="aadharNumber">Aadhar Number</th>
                     <th scope="row" id="oldNumber">Old Number</th>
                     <th scope="row" id="newNumber">New Number</th>
                     <th scope="row" id="oldAddress">Old Address</th>
                     <th scope="row" id="newAddress">New Address</th>
                     <th scope="row" id="status">Status</th>
+                    <th scope="row" id="status">View</th>
                 </tr>
             </thead>
             <tbody id="requestTable"></tbody>
