--- a/requestchange.html
+++ b/requestchange.html
@@ -66,6 +66,14 @@
                 </span>
                 <br>
                 <br>
+                <label>Pan Status</label><br>
+                <span >
+                    <select id="status" name="Status">
+                        <option value="">Please Select</option>
+                        <option value="Active">Active</option>
+                        <option value="In Active">In Active</option>
+                  </select> 
+                   </span>
                 <button type="submit"> Submit </button>
             </form>
         </div>
