--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                               </span>
                               <br>
                               <label> <strong> Mobile No * </strong> </label><br>
-                              <input type="tel" name="Mobile Number" id="mobilenumber" pattern="[6789][0-9]{9}"
+                              <input type="tel" name="Mobile Number" id="mobilenumber" minlength="10" maxlength="10" pattern="[6789][0-9]{9}"
                                     placeholder="Mobile Number">
                               <br>
                               <label> <strong> Email ID </strong> </label><br>
                               <input type="email" name="email" id="Email" placeholder="Email"
-                                    pattern="[a-z._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+                                    pattern="[a-z._%+-]+@[a-z.-]+\.[a-z]{2,}$" required>
                               <br>
 
                               <label> <strong>Date Of Birth *</strong> </label><br>
@@ -83,7 +83,7 @@
                               <input class="state" id="state" type="text" name="State" placeholder="State">
                               <br>
                               <label> <strong> Pin Code *</strong> </label><br>
-                              <input class="pin" id="pin" type="text" name="Pin Code" pattern="[6][0-9]{6}"
+                              <input class="pin" id="pin" type="text" name="Pin Code" pattern="[6][0-9]{5}"
                                     placeholder="Pin Code">
                               <br>
                               <label> <strong> Gender *</strong> </label>
