admin page finished

--- a/adminlistapplication.html
+++ b/adminlistapplication.html
@@ -11,20 +11,20 @@
 </head>
 
 <body>
-    <img src="PANCardLogo.png" alt="pancard">
+    <a href="logoutpage.html"><img src="PANCardLogo.png" alt="pancard"></a>
     <header>
         <nav class="menubar">
             <ul>
-                <a  href="userlist.html">
+                <a href="userlist.html">
                     <li>List Of User</li>
                 </a>
-                <a  href="adminrequestapplication.html">
+                <a href="adminrequestapplication.html">
                     <li>Request Application</li>
                 </a>
-                <a  href="adminlistapplication.html">
+                <a href="adminlistapplication.html">
                     <li>Edit Application</li>
                 </a>
-                
+
             </ul>
         </nav>
     </header>
