--- a/adminlistapplication.html
+++ b/adminlistapplication.html
@@ -56,6 +56,8 @@
                 <th scope="col" id="gender">State</th>
                 <th scope="col">Action</th>
                 <th scope="col">Status</th>
+                <th scope="col">User Status</th>
+                <th scope="col">Update</th>
             </tr>
         </thead>
         <tbody id="applicationTable"></tbody>
