--- a/editpage.html
+++ b/editpage.html
@@ -38,31 +38,36 @@
             <tr>
                 <th scope="row"> MOBILENUMBER:</th>
                 <td>
-                    <input type="text" id="mobilenumber">
+                    <input type="text" id="mobilenumber" pattern="[6789][0-9]{9}">
                 </td>
             </tr>
             <tr>
                 <th scope="row"> EMAILID:</th>
                 <td>
-                    <input type="text" id="emailid">
+                    <input type="email" id="emailid">
                 </td>
             </tr>
             <tr>
                 <th scope="row"> DATEOFBIRTH:</th>
                 <td>
-                    <input type="text" id="dateofbirth">
+                    <input type="date" id="dateofbirth" pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}">
                 </td>
             </tr>
             <tr>
                 <th scope="row"> AADHARNUMBER:</th>
                 <td>
-                    <input type="text" id="aadharnumber">
+                    <input type="text" id="aadharnumber" minlength="12">
                 </td>
             </tr>
             <tr>
                 <th scope="row"> GENDER:</th>
                 <td>
-                    <input type="text" id="gender">
+                    <select id="gender" name="gender">
+                        <option value="">Please Select</option>
+                        <option value="male">Male</option>
+                        <option value="Female">Female</option>
+                        <option value="Transgender">Transgender</option>
+                  </select>
                 </td>
             </tr>
             <tr>
@@ -92,7 +97,7 @@
             <tr>
                 <th scope="row"> PINCODE:</th>
                 <td>
-                    <input type="text" id="pincode">
+                    <input type="text" id="pincode" pattern="[6][0-9]{5}">
                 </td>
             </tr>
         </table>
