--- a/listapplication.html
+++ b/listapplication.html
@@ -43,6 +43,7 @@
                 <th scope="col" id="adharnumber">Aadhar Number</th>
                 <th scope="col" id="gender">Gender</th>
                 <th scope="col" id="gender">State</th>
+                <th scope="col">User Status</th>                
                 <th scope="col">Action</th>
             </tr>
         </thead>
