--- a/requestchange.html
+++ b/requestchange.html
@@ -25,13 +25,9 @@
         <h2>REQUEST TO CHANGE</h2>
         <div class="container">
             <form onsubmit=" requestChange()">
-                <label> <strong> Pancard Holder Name *</strong> </label>
+                <label> <strong> Pancard Name *</strong> </label>
                 <input type="text" id="applicantname" placeholder="Pan Card Name" pattern="[A-Za-z]{3,15}" name="Name"
                     required>
-                <br>
-                <br>
-                <label> <strong> Pancard Id Number *</strong> </label>
-                <input type="text" id="applicantIdNumber" placeholder="Pan Card  Id Number" name="idNumber" required>
                 <br>
                 <br>
                 <label> <strong> Aadhar Number *</strong> </label>
