--- a/header.html
+++ b/header.html
@@ -3,10 +3,8 @@
         <ul>
         <a class="navbar" href="registration.html"> <li> Registration </li></a>
         <a class="navbar" href="index.html"><li> Apply </li></a>
-        <a class="navbar" href="listapplication.html"><li> Modify </li></a>
+        <a class="navbar" href="listapplication.html"><li>List Application </li></a>
         <a class="navbar" href="requestchange.html"><li> Request Change </li></a>
-        <a class="navbar" href="viewlist.html"><li> List Of Application </li></a>
-        <a class="navbar" href="requestapplication.html"><li> List Of Request </li></a>
     </ul>
     </nav>
 </header>
