--- a/adminrequestapplication.html
+++ b/adminrequestapplication.html
@@ -44,12 +44,12 @@
                     <th scope="row" id="oldAddress">Old Address</th>
                     <th scope="row" id="newAddress">New Address</th>
                     <th scope="row" id="status">Status</th>
-                    <th scope="row" id="status">View</th>
                 </tr>
             </thead>
             <tbody id="requestTable"></tbody>
         </table>
     </div>
 </body>
+<script src="routes.js"></script>
 
 </html>
