--- a/header.html
+++ b/header.html
@@ -5,6 +5,8 @@
         <a class="navbar" href="index.html"><li> Apply </li></a>
         <a class="navbar" href="listapplication.html"><li>List Application </li></a>
         <a class="navbar" href="requestchange.html"><li> Request Change </li></a>
+        <a class="navbar" href="logoutpage.html"> <li> Logout </li></a>
     </ul>
     </nav>
 </header>
+<script src="routes.js"></script>
