--- a/details.html
+++ b/details.html
@@ -75,7 +75,7 @@ h2{
             <td id="status"></td>
         </tr>
         </table>
-        <button type="button"> <a href="adminrequestapplication.html"> Back </a></button>
+        <button type="button"> <a href="requestapplication.html"> Back </a></button>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
