basic auth and toastr finish

--- a/requestchange.html
+++ b/requestchange.html
@@ -27,7 +27,7 @@
             <form onsubmit=" requestChange()">
                 <label> <strong> Pancard Name *</strong> </label>
                 <input type="text" id="applicantname" placeholder="Pan Card Name" pattern="[A-Za-z]{3,15}" name="Name"
-                    required>
+                   >
                 <br>
                 <br>
                 <label> <strong> Aadhar Number *</strong> </label>
@@ -75,5 +75,7 @@
         </div>
     </div>
 </body>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </html>
