--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+      <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
             integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -106,15 +111,9 @@
                         crossorigin="anonymous" referrerpolicy="no-referrer">
                         </script>
                   <script src="index.js"> </script>
-                  <script>
-                        let nameFile = JSON.parse(localStorage.getItem('nameform'));
-                        console.log(nameFile);
-                        document.querySelector("#userNameView").innerHTML = nameFile.userName;
-                  </script>
                   <script src="serviceLayer.js"></script>
             </div>
       </div>
-
 </body>
 
 </html>
