--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title> PAN CARD APPLICATION </title>
 </head>
-
 <body>
-
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+       crossorigin="anonymous">
+      </script>
       <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
       <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
             integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            crossorigin="anonymous"
+             referrerpolicy="no-referrer"></script>
+
       <link rel="stylesheet" href="index.css">
 
       <img src="asset/image/PANCardLogo.png" alt="pancard">
@@ -61,7 +64,6 @@
                               <input type="email" name="email" id="Email" placeholder="Email"
                                     pattern="[a-z._%+-]+@[a-z.-]+\.[a-z]{2,}$" required>
                               <br>
-
                               <label> <strong>Date Of Birth *</strong> </label><br>
                               <input type="date" name="date of birth" id="dob"
                                     pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}"
