--- a/adminlistapplication.html
+++ b/adminlistapplication.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="logoutpage.html"><img src="PANCardLogo.png" alt="pancard"></a>
+    <img src="PANCardLogo.png" alt="pancard">
     <header>
         <nav class="menubar">
             <ul>
@@ -22,9 +22,11 @@
                     <li>Request Application</li>
                 </a>
                 <a href="adminlistapplication.html">
-                    <li>Edit Application</li>
+                    <li>List Application</li>
                 </a>
-
+                <a href="logoutpage.html">
+                    <li>Logout</li>
+                </a>
             </ul>
         </nav>
     </header>
