--- a/editpage.html
+++ b/editpage.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <script src="jquery.min.js"></script>
     <div class="editpage">
         <h2>EDIT DETAILS</h2>
         <table>
