--- a/header.html
+++ b/header.html
@@ -5,6 +5,7 @@
         <a class="navbar" href="index.html"><li> Apply </li></a>
         <a class="navbar" href="listapplication.html"><li>List Application </li></a>
         <a class="navbar" href="requestchange.html"><li> Request Change </li></a>
+        <a class="navbar" href="service.html"> <li> Service </li></a>
         <a class="navbar" href="logoutpage.html"> <li> Logout </li></a>
     </ul>
     </nav>
