--- a/registration.html
+++ b/registration.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <script src="jquery.min.js"></script>
     <h1>REGISTRATION</h1>
     <div class="overall">
         <form onsubmit="registration()">
