--- a/userlist.html
+++ b/userlist.html
@@ -21,7 +21,10 @@
                     <li>Request Application</li>
                 </a>
                 <a  href="adminlistapplication.html">
-                    <li>Edit Application</li>
+                    <li>List Application</li>
+                </a>
+                <a href="logoutpage.html">
+                    <li>Logout</li>
                 </a>
             </ul>
         </nav>
