--- a/service.html
+++ b/service.html
@@ -22,7 +22,6 @@
         font-size: 20px;
             margin:20px;
             text-align: center;
-            width: 100px;
             border: 2px solid;
             width: 220px;
             height: 250px;
@@ -64,37 +63,37 @@
     <div class="service">
         
     <span class="layar">
-        <img src="asset/image/service.png">
+        <img src="asset/image/service.png" alt="serviceone">
             <h4>PAN Card as an Indian Citizen</h4>
     </span>
 
     <span class="layar">
-        <img src="asset/image/service1.png">
+        <img src="asset/image/service1.png" alt="servicesencond">
         <h4>PAN Card as Foreign Citizen</h4>
     </span>
 
     <span class="layar">
-        <img src="asset/image/service2.png">
+        <img src="asset/image/service2.png" alt="servicethird">
         <h4>Download e-PAN</h4>
     </span>
     <span class="layar">
-        <img src="asset/image/service3.png">
+        <img src="asset/image/service3.png" alt="servicefour">
         <h4>Reprint PAN Card</h4>
     </span>
     <span class="layar">
-        <img src="asset/image/servivce4.png">
+        <img src="asset/image/servivce4.png" alt="servicefive">
         <h4>Change/Correction in PAN Card</h4>
     </span>
     <span class="layar">
-        <img src="asset/image/service5.png">
+        <img src="asset/image/service5.png" alt="servicesix">
         <h4>Facility for address update in PAN database through eKYC mode</h4>
     </span>
     <span class="layar">
-        <img src="asset/image/service6.png">
+        <img src="asset/image/service6.png" alt="serviceseven">
         <h4>Track PAN  Card</h4>
     </span>
     <span class="layar">
-        <img src="asset/image/service7.png">
+        <img src="asset/image/service7.png" alt="serviceeight">
         <h4>PAN Bulk Verification</h4>
     </span>
 </div>
