--- a/requestchange.html
+++ b/requestchange.html
@@ -26,12 +26,11 @@
         <div class="container">
             <form onsubmit=" requestChange()">
                 <label> <strong> Pancard Name *</strong> </label>
-                <input type="text" id="applicantname" placeholder="Pan Card Name" pattern="[A-Za-z]{3,15}" name="Name"
-                   >
+                <input type="text" id="applicantname" placeholder="Pan Card Name" autocomplete="off" pattern="[A-Za-z]{3,15}" name="Name" required >
                 <br>
                 <br>
                 <label> <strong> Aadhar Number *</strong> </label>
-                <input type="text" id="aadharNumber" placeholder="Aadhar Number" minlength="12" maxlength="12"
+                <input type="text" id="aadharNumber" placeholder="Aadhar Number" autocomplete="off" minlength="12" maxlength="12"
                     pattern="[0-9]{12}" name="aadharNumber" required>
                 <br>
                 <br>
@@ -40,12 +39,12 @@
                 <br>
                 <label>Old Mobile Number </label>
                 <span class="mobileNumber">
-                    <input type="tel" id="mobileNumber" placeholder="Old Number" pattern="[6789][0-9]{9}"
+                    <input type="tel" id="mobileNumber" placeholder="Old Number" autocomplete="off" pattern="[6789][0-9]{9}"
                         name="OldNumber" required>
                 </span>
                 <label>Change Mobile Number</label>
                 <span calss="changeNumber">
-                    <input type="tel" id="changeNumber" placeholder="Change Number" pattern="[6789][0-9]{9}"
+                    <input type="tel" id="changeNumber" placeholder="Change Number" autocomplete="off" pattern="[6789][0-9]{9}"
                         name="ChangeNumber" required>
                 </span>
                 <br>
@@ -54,11 +53,11 @@
                 <br>
                 <label>Old Address</label>
                 <span class="oldAddress">
-                    <input type="text" id="oldAddress" placeholder="Old Address" name="OldAddress" required>
+                    <input type="text" id="oldAddress" placeholder="Old Address" autocomplete="off" name="OldAddress" required>
                 </span>
                 <label>Change Address</label>
                 <span class="changeAddress">
-                    <input type="text" id="changeAddress" placeholder="Change Address" name="ChangeAddress" required>
+                    <input type="text" id="changeAddress" placeholder="Change Address" autocomplete="off" name="ChangeAddress" required>
                 </span>
                 <br>
                 <br>
