--- a/admin.html
+++ b/admin.html
@@ -15,9 +15,9 @@
   <div class="overall">
     <form onsubmit="adminpage()">
       <label for="username"><strong>User Name</strong></label>
-      <input type="text" id="userName" placeholder="Enter User Name" name="uname">
+      <input type="text" id="userName" placeholder="Enter User Name" name="uname" required>
       <label for="password"><strong>Password</strong></label>
-      <input type="password" minlength="6" id="password" placeholder="Enter Password">
+      <input type="password" minlength="6" id="password" placeholder="Enter Password" required>
       <button type="submit">Login</button>
     </form>
     <script src="admin.js">
