--- a/loginpage.html
+++ b/loginpage.html
@@ -25,15 +25,18 @@
   <div class="overall">
     <form onsubmit="loginpage()">
       <label for="username"><strong>User Name</strong></label>
-      <input type="text" id="username" placeholder="Enter User Name" name="uname">
+      <input type="text" id="username" placeholder="Enter User Name" name="uname" >
       <label for="password"><strong>Password</strong></label>
-      <input type="password" minlength="6" id="password" placeholder="Enter Password">
+      <input type="password" minlength="6" id="password" placeholder="Enter Password" >
       <button type="submit">Login</button>
       <button><a href="registration.html">Registration</a></button>
     </form>
     <script src="serviceLayer.js"></script>
     <script src="loginpage.js">
     </script>
+     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
   </div>
  
 </body>
