--- a/adminrequestapplication.html
+++ b/adminrequestapplication.html
@@ -47,6 +47,7 @@
                     <th scope="row" id="oldAddress">Old Address</th>
                     <th scope="row" id="newAddress">New Address</th>
                     <th scope="row" id="status">Status</th>
+                    <th scope="row" id="status">Status</th>
                 </tr>
             </thead>
             <tbody id="requestTable"></tbody>
