--- a/adminrequestapplication.html
+++ b/adminrequestapplication.html
@@ -53,7 +53,10 @@
             <tbody id="requestTable"></tbody>
         </table>
     </div>
+    <!-- Sweet Alert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>  
+    <script src="routes.js"></script> 
 </body>
-<script src="routes.js"></script>
+
 
 </html>
