--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                               <label> <strong> Applicacnt Name *</strong> </label><br>
                               <span class="firstname">
                                     <input type="text" id="applicantnames" placeholder="First Name"
-                                          pattern="[A-Za-z]{3,15}" name="first_name" required>
+                                          pattern="[A-Za-z]{3,15}" name="first_name" autocomplete="off" required>
                               </span>
                               <br>
                               <label> <strong> Father Name * </strong> </label><br>
@@ -53,40 +53,40 @@
                               <label> <strong> Mother Name </strong> </label><br>
                               <span class="motherfirstname">
                                     <input type="text" id="mathername" pattern="[A-Za-z]{3,15}" placeholder="Mother Name"
-                                          name="Mother_Name"required>
+                                          name="Mother_Name" autocomplete="off" required>
                               </span>
                               <br>
                               <label> <strong> Mobile No * </strong> </label><br>
                               <input type="tel" name="Mobile Number" id="mobilenumber" minlength="10" maxlength="10" pattern="[6789][0-9]{9}"
-                                    placeholder="Mobile Number" required>
+                                    placeholder="Mobile Number" autocomplete="off" required>
                               <br>
                               <label> <strong> Email ID </strong> </label><br>
                               <input type="email" name="email" id="Email" placeholder="Email"
-                                    pattern="[a-z._%+-]+@[a-z.-]+\.[a-z]{2,}$" required>
+                                    pattern="[a-z._%+-]+@[a-z.-]+\.[a-z]{2,}$" autocomplete="off" required>
                               <br>
                               <label> <strong>Date Of Birth *</strong> </label><br>
                               <input type="date" name="date of birth" id="dob"
                                     pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}"
-                                    placeholder="date of birth"> <br>
+                                    placeholder="date of birth" autocomplete="off" > <br>
                               <label> <strong> Aadhar Number </strong> </label><br>
                               <input type="tel" name="number" id="aadharnumber" pattern="[0-9]{12}"
                                     placeholder="Aadhar Number" required><br>
 
                               <label> <strong> No./ Building / Village *</strong> </label><br>
-                              <input class="no" id="no" type="text" placeholder="No./ Building / Village" required>
+                              <input class="no" id="no" type="text" placeholder="No./ Building / Village" autocomplete="off" required>
                               <br>
                               <label> <strong> Area/ Road/ P.O. *</strong> </label><br>
-                              <input class="area" id="area" type="text" name="Area" placeholder="Area/ Road/ P.O." required>
+                              <input class="area" id="area" type="text" name="Area" placeholder="Area/ Road/ P.O." autocomplete="off" required>
                               <br>
                               <label> <strong> City/ Town/ District *</strong> </label><br>
                               <input class="city" id="city" type="text" name=" City"
-                                    placeholder=" City/ Town/ District" required>
+                                    placeholder=" City/ Town/ District" autocomplete="off" required>
                               <br>
                               <label> <strong> State *</strong> </label><br>
-                              <input class="state" id="state" type="text" name="State" placeholder="State" required>
+                              <input class="state" id="state" type="text" name="State" autocomplete="off" placeholder="State" required>
                               <br>
                               <label> <strong> Pin Code *</strong> </label><br>
-                              <input class="pin" id="pin" type="text" name="Pin Code" pattern="[6][0-9]{5}"
+                              <input class="pin" id="pin" type="text" name="Pin Code" autocomplete="off" pattern="[6][0-9]{5}"
                                     placeholder="Pin Code" required>
                               <br>
                               <label> <strong> Gender *</strong> </label>
